--- a/main.ui
+++ b/main.ui
@@ -6,11 +6,11 @@
     <property name="default_height">240</property>
     <property name="hide_titlebar_when_maximized">True</property>
     <property name="has_resize_grip">False</property>
-  	<child>
-  		<object class="GtkStack" id="stack">
-  			<child>
-          <!-- Default clock display -->
-  				<object class="GtkEventBox" id="clockView">
+      <child>
+        <object class="GtkStack" id="stack">
+  	  	<child>
+	    		<!-- Default clock display -->
+  	      <object class="GtkEventBox" id="clockView">
   					<child>
   						<object class="GtkLabel" id="timeLabel">
 				        <property name="label" translatable="yes">12:00</property>
@@ -19,7 +19,7 @@
   				</object>
   			</child>
   			<child>
-          <!-- List of Radio stations -->
+					<!-- List of Radio stations -->
   				<object class="GtkScrolledWindow" id="mainView">
   					<child>
   						<object class="GtkBox" id="radioList">
@@ -44,22 +44,16 @@
 				        </child>
   						</object>
   					</child>
-  				</object>
-  			</child>
-        <child>
+  	    	</object>
+  	  	</child>
+				<child>
           <!-- Radio Player Screen -->
-          <object class="GtkBox" id="radioBox">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="orientation">vertical</property>
+          <object class="GtkBox" id="radioView">
+						<property name="orientation">vertical</property>
             <child>
               <object class="GtkEventBox" id="radioHeader">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkLabel" id="radioClock">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
                     <property name="label" translatable="yes">12:00</property>
                   </object>
                 </child>
@@ -72,13 +66,8 @@
             </child>
             <child>
               <object class="GtkEventBox" id="playerBox">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkLabel" id="stationInfo">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">label</property>
                   </object>
                 </child>
               </object>
@@ -88,8 +77,8 @@
                 <property name="position">1</property>
               </packing>
             </child>
-          </object>          
-        </child>
+					</object>
+				</child>
   		</object>
   	</child>
   </object>
