--- a/main.ui
+++ b/main.ui
@@ -77,6 +77,20 @@
                 <property name="position">1</property>
               </packing>
             </child>
+		        <child>
+    		      <object class="GtkScale" id="volumeScale">
+        		    <property name="visible">True</property>
+           			<property name="can_focus">True</property>
+    		        <property name="fill_level">100</property>
+            		<property name="round_digits">1</property>
+            		<property name="draw_value">False</property>
+		          </object>
+    		      <packing>
+        		    <property name="expand">False</property>
+            		<property name="fill">True</property>
+            		<property name="position">2</property>
+          		</packing>
+        		</child>
 					</object>
 				</child>
   		</object>
