--- a/day.css
+++ b/day.css
@@ -5,6 +5,15 @@
 	background-color: #000;
 }
 
+GtkContainer {
+	padding: 3px;
+}
+
+GtkEventBox {
+	padding: 5px;
+	margin: 5px;
+}
+
 GtkLabel {
   border-style: solid;
   border-width: 5px;
@@ -24,3 +33,22 @@ GtkLabel {
 	font-size: 28px;
 	border-style: none;
 }
+
+.scrollbar.trough,
+.scrollbars-junction {
+  background-color: #000;
+}
+
+.scrollbar.slider {
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 10px;
+  border-color: transparent;
+  background-clip: padding-box;
+  background-color: #66e0ff;
+}
+
+.scrollbar.slider:prelight {
+  background-color: lighter(#66e0ff);
+}
+
