--- a/stylesheets/night.css
+++ b/stylesheets/night.css
@@ -1,4 +1,4 @@
-@import url("stylesheets/main.css");
+@import url("main.css");
 
 @define-color tron_orange #FB8448;
 @define-color tron_yellow #FFF05F;
