--- a/ui/main.ui
+++ b/ui/main.ui
@@ -12,10 +12,10 @@
           <!-- Default clock display -->
           <object class="GtkEventBox" id="clockView">
           <child>
-              <object class="GtkLabel" id="timeLabel">
+            <object class="GtkLabel" id="timeLabel">
             <property name="label">12:00</property>
-              </object>
-            </child>
+           </object>
+          </child>
         </object>
         </child>
         <child>
@@ -26,13 +26,35 @@
               <object class="GtkEventBox" id="mainHeader">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <child>
-                  <object class="GtkLabel" id="mainClock">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">12:00</property>
-                  </object>
-                </child>
+								<child>
+									<object class="GtkBox" id="headerBox">
+				            <property name="orientation">horizontal</property>
+										<child>
+											<object class="GtkLabel" id="radioStatus">
+        		            <property name="visible">False</property>
+            		        <property name="can_focus">False</property>
+                		    <property name="label" translatable="yes"></property>
+											</object>
+	      	  		      <packing>
+  	  	  	    	      <property name="expand">False</property>
+    			        	    <property name="fill">True</property>
+  	  	  	        	  <property name="position">1</property>
+	  	      	      	</packing>
+										</child>
+        		        <child>
+            		      <object class="GtkLabel" id="mainClock">
+                		    <property name="visible">True</property>
+                    		<property name="can_focus">False</property>
+      		              <property name="label" translatable="yes">12:00</property>
+          		        </object>
+  	  	 	   	      	<packing>
+    	  		        	  <property name="expand">True</property>
+    			        	    <property name="fill">True</property>
+  	    		    	      <property name="position">0</property>
+	        			      </packing>
+              		  </child>
+									</object>
+								</child>
               </object>
               <packing>
                 <property name="expand">False</property>
