--- a/radio/stylesheets/main.css
+++ b/radio/stylesheets/main.css
@@ -16,7 +16,8 @@ GtkEventBox {
 GtkLabel {
   border-style: solid;
   border-width: 5px;
-  border-radius: 5px;  
+  border-radius: 5px;
+  border-color: #FB8448;
 }
 
 /* main clock display */
