--- a/radio/stylesheets/night.css
+++ b/radio/stylesheets/night.css
@@ -8,10 +8,7 @@
   color: @tron_yellow;
 }
 
-GtkLabel {
-  border-style: solid;
-  border-width: 5px;
-  border-radius: 5px;
+#bordered, #stationInfo {
   border-color: @tron_orange;
 }
 
